...
    <string name="title_activity_drawer" translatable="false">drawer</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    /*menu item names*/
    <string name="item_start">Start</string>
    <string name="item_feld">Felder</string>
    <string name="item_dmg">Schadensmeldungen</string>
    <string name="item_contract">Verträge</string>
    <string name="item_acc">Account</string>
    <string name="item_app">Über Conserve</string>
    <string name="item_help">Hilfe</string>
    <string name="item_logout">Logout</string>


    /*strings relating to FeldFragment*/
    <string name="fieldreg_up">Neues Feld anlegen</string>
    <string name="field_delete">Feld löschen</string>
    <string name="nav_headerText" translatable="false">User Name</string>
...
